# YouTube-SubtitlePlus

./: .gitignore  25_Things_JavaScript_Developers_Should_Know_but_Probably_Dont_008_Higher_Order_Functions_JavaScript_Tutorial.ass  CLAUDE.md  CSS-STYLE-GUIDE.md  DAEMON_GUIDE.md  README.md  README_zh.md  REFACTORING_PLAN.md  SETTINGS-TEST-GUIDE.md  com.youtube.subtitleplus.plist  daemon_server.sh  daemon_status.sh  install_system_service.sh  manage_subtitles.sh  move_subtitles.sh  restart_daemon.sh  start_server.sh  stop_server.sh  uninstall_system_service.sh
docs/: AUTO_LOAD_GUIDE.md  INSTALL.md  README.md
examples/: example-subtitle.srt  test_chinese.srt  test_english.srt
extension/: background.js  config.js  content.js  content_backup.js  inject.js  manifest.json  popup.css  popup.html  popup.js  subtitle-overlay.css  subtitle-parser.js  transcript-core.js
extension/icons/: README.md
scripts/server/: daemon_server.sh  stop_daemon.sh
scripts/subtitles/: manage_subtitles.sh  move_subtitles.sh
server/: README.md  pyproject.toml  subtitle_server.py
tests/: clear-data.js  debug-positioning.js  debug-youtube.js  improved-subtitle-renderer.js  layer-fix-guide.md  test-bilingual-styles.html  test-clean-css.html  test-dom-order-layer.js  test-subtitle-layer.html  test-subtitle.js  verify-layer-fix.js
