[project]
name = "youtube-subtitleplus-server"
version = "1.1.0"
description = "Local subtitle server for YouTube SubtitlePlus Chrome extension"
authors = [
    {name = "YouTube SubtitlePlus", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8.1"
dependencies = [
    "Flask>=2.3.0,<3.0.0",
    "Flask-CORS>=4.0.0,<5.0.0",
    "Werkzeug>=2.3.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
subtitle-server = "subtitle_server:main"